--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="date">Datum</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_list">Todo List</string>
+    <string name="save">Save</string>
+    <string name="reset">Reset</string>
+    <string name="all">All</string>
+    <string name="count">Count</string>
+    <string name="today">Today</string>
 
 </resources>
